--- a/app/views/collects/new.html.erb
+++ b/app/views/collects/new.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="container">
     <div class="container-soutenir">
-      <h1 class="header text-primary pt-5 text-center">Faire un relevé</h1>
+      <h1 class="header text-primary pt-5 text-center">Saisir un relevé</h1>
       <%= simple_form_for @collect do |f| %>
 
         <p><b>1.</b>Choisir un bac :</p>
@@ -21,4 +21,3 @@
     </div>
   </div>
 </div>
-
