change mail for new user by referent

--- a/app/views/devise/mailer/reset_password_instructions.text.erb
+++ b/app/views/devise/mailer/reset_password_instructions.text.erb
@@ -1,7 +1,15 @@
 Bonjour <%= @resource.civility %> <%= @resource.last_name.upcase %>
 
-Cliquez sur le lien ci-dessous afin de configurer votre mot de passe pour le Défi Zéro Déchet des Pros:
+Félicitations <%= @resource.first_name %>, vous êtes inscrit.e au Défi Zéro Déchet des Pros par votre référent.e <%= User.find_by(id: @resource.company.referent.user).first_name %>.
+Vous aussi, vous pouvez maintenant faire la différence, pour que <%= @resource.company.name %> réduise ses déchets et gagne le défi !
+Vous disposez d’un compte utilisateur sur le site internet defi-zero-dechet-pro.com.
+Il vous permet de :
+Faire partie de la communauté Défi Zéro Déchet des Pros, pour échanger avec les autres participants sur les questions, les problèmes, les expériences...
+Nous aider à mieux accompagner <%= @resource.company.name %> en répondant aux questionnaires
+Et enfin, c’est une preuve de l’engagement de votre structure envers le Défi, ce qui peut donner des points pour gagner !
+Pour accéder à votre compte, cliquez sur le lien ci-dessous pour configurer votre mot de passe :
 
 <%= link_to "Configurer mon mot de passe", edit_password_url(@resource, reset_password_token: @token) %>
 
 Écologiquement, l'équipe Défi.
+<%= devise_image_tag("logo.jpg", alt:"logo") %>
