--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,6 +1,13 @@
 <p>Bonjour <%= @resource.civility %> <%= @resource.last_name.upcase %></p>
 
-<p>Cliquez sur le lien ci-dessous pour configurer votre mot de passe :</p>
+<p>Félicitations <%= @resource.first_name %>, vous êtes inscrit.e au Défi Zéro Déchet des Pros par votre référent.e <%= User.find_by(id: @resource.company.referent.user).first_name %>.</p>
+<p>Vous aussi, vous pouvez maintenant faire la différence, pour que <%= @resource.company.name %> réduise ses déchets et gagne le défi !</p>
+<p>Vous disposez d’un compte utilisateur sur le site internet defi-zero-dechet-pro.com.</p>
+<p>Il vous permet de :</p>
+<p>Faire partie de la communauté Défi Zéro Déchet des Pros, pour échanger avec les autres participants sur les questions, les problèmes, les expériences...</p>
+<p>Nous aider à mieux accompagner <%= @resource.company.name %> en répondant aux questionnaires</p>
+<p>Et enfin, c’est une preuve de l’engagement de votre structure envers le Défi, ce qui peut donner des points pour gagner !</p>
+<p>Pour accéder à votre compte, cliquez sur le lien ci-dessous pour configurer votre mot de passe :</p>
 
 <p><%= link_to "Configurer mon mot de passe", edit_password_url(@resource, reset_password_token: @token) %></p>
 
