--- a/app/views/comportamental_formulaires/page_five.html.erb
+++ b/app/views/comportamental_formulaires/page_five.html.erb
@@ -12,10 +12,10 @@
 
   <%= simple_form_for(@user_behaviour_diag, method: :put, url: wizard_path) do |f| %>
 
-  <p class="mt-4"><b>16. </b>Seriez-vous prêt·e à agir avec le·la référent·e et vos collaborateur·rice·s pour atteindre l’objectif de réduire d'au moins 10% les déchets de fonctionnement de votre structure ?</p>
+  <p class="mt-4"><b>16. </b>Seriez-vous prêt·e à agir avec le·la référent·e et vos collaborateur·rice·s pour atteindre l’objectif de réduire d'au moins 10% les déchets de fonctionnement de votre structure :</p>
   <%= f.input :favorable_reduction, as: :boolean, label: "oui je suis favorable" %>
 
-  <p class="mt-4"><b>17. </b>Vous êtes ?</p>
+  <p class="mt-4"><b>17. </b>Vous êtes :</p>
   <%= f.collection_radio_buttons :sexe, ["Un homme", "Une femme", "Je ne souhaite pas le préciser"], :to_s, :to_s do |input| %>
     <label class="mx-2 mb-3">
       <%= input.radio_button %>
@@ -23,15 +23,15 @@
     </label>
   <% end %>
 
-  <p class="mt-4"><b>18. </b>Votre âge ?</p>
+  <p class="mt-4"><b>18. </b>Votre âge :</p>
   <%= f.input :age, label: false %>
 
-  <p class="mt-4"><b>19. </b>Depuis combien d'années travaillez-vous dans votre structure ?</p>
+  <p class="mt-4"><b>19. </b>Depuis combien d'années travaillez-vous dans votre structure :</p>
   <%= f.input :seniority, label: false %>
 
   <div class="d-flex justify-content-around mb-5 mt-4">
     <%= link_to "< Précédent", previous_wizard_path, class:"btn btn-primary bold" %>
-    <%= f.button :submit, "Suivant >", class:"btn btn-primary bold" %>
+    <%= f.button :submit, "Valider >", class:"btn btn-primary bold" %>
   </div>
 
   <% end %>
