--- a/app/views/comportamental_formulaires/page_two.html.erb
+++ b/app/views/comportamental_formulaires/page_two.html.erb
@@ -12,7 +12,7 @@
   </div>
 
   <%= simple_form_for(@user_behaviour_diag, method: :put, url: wizard_path) do |f| %>
-    <p class="mt-4"><b>7. </b>Vous avez connaissance du contexte des déchets (enjeux, problématiques…) ?</p>
+    <p class="mt-4"><b>7. </b>Vous avez connaissance du contexte des déchets (enjeux, problématiques…) :</p>
     <%= f.collection_radio_buttons :context_knowledge, ["Pas du tout", "Un peu", "Moyennement", "Beaucoup",  "Tout à fait", "Non concerné"], :to_s, :to_s do |input| %>
       <label class="mx-2 mb-3">
         <%= input.radio_button %>
@@ -22,7 +22,7 @@
     <p class="mt-4"><b>7.1 </b>Dites nous en plus</p>
     <%= f.input :context_knowledge_comment,label: false, placeholder: "Réponse courte"%>
 
-    <p class="mt-4"><b>8. </b>Vous vous sentez concerné·e par la thématique des déchets ?</p>
+    <p class="mt-4"><b>8. </b>Vous vous sentez concerné·e par la thématique des déchets :</p>
     <%= f.collection_radio_buttons :concerned, ["Pas du tout", "Un peu", "Moyennement", "Beaucoup",  "Tout à fait", "Non concerné"], :to_s, :to_s do |input| %>
       <label class="mx-2 mb-3">
         <%= input.radio_button %>
@@ -30,7 +30,7 @@
       </label>
     <% end %>
 
-    <p class="mt-4"><b>9. </b>Vous êtes favorables à la réduction des déchets ?</p>
+    <p class="mt-4"><b>9. </b>Vous êtes favorables à la réduction des déchets :</p>
     <%= f.collection_radio_buttons :favorable_reduction, ["Pas du tout", "Un peu", "Moyennement", "Beaucoup",  "Tout à fait", "Non concerné"], :to_s, :to_s do |input| %>
       <label class="mx-2 mb-3">
         <%= input.radio_button %>
@@ -46,7 +46,7 @@
       </label>
     <% end %>
 
-    <p class="mt-4"><b>11. </b>La réduction des déchets de fonctionnement sur votre lieu du travail vous semble difficile ?</p>
+    <p class="mt-4"><b>11. </b>La réduction des déchets de fonctionnement sur votre lieu du travail vous semble difficile :</p>
     <%= f.collection_radio_buttons :trash_reduction_hard, ["Pas du tout", "Un peu", "Moyennement", "Beaucoup",  "Tout à fait", "Non concerné"], :to_s, :to_s do |input| %>
       <label class="mx-2 mb-3">
         <%= input.radio_button %>
@@ -54,7 +54,7 @@
       </label>
     <% end %>
 
-    <p class="mt-4"><b>12. </b>La présence d’une personne ressource sur la question des déchets de fonctionnement dans votre structure vous semble inutile ?</p>
+    <p class="mt-4"><b>12. </b>La présence d’une personne ressource sur la question des déchets de fonctionnement dans votre structure vous semble inutile :</p>
     <%= f.collection_radio_buttons :dedicated_employee, ["Pas du tout", "Un peu", "Moyennement", "Beaucoup",  "Tout à fait", "Non concerné"], :to_s, :to_s do |input| %>
       <label class="mx-2 mb-3">
         <%= input.radio_button %>
