--- a/app/views/company_behaviour_diags/_diag_action_fields.html.erb
+++ b/app/views/company_behaviour_diags/_diag_action_fields.html.erb
@@ -1,5 +1,5 @@
 <div class='nested-fields'>
-    <%= f.input :action, label: false  %>
+    <%= f.input :action, label: false, placeholder: "nom de l'action"  %>
     <%= f.input :diag_action_comment, placeholder: "description de l'action", label: false%>
     <%= link_to_remove_association "Supprimer l'action", f %>
 </div>
