--- a/app/views/company_behaviour_diags/step_three.html.erb
+++ b/app/views/company_behaviour_diags/step_three.html.erb
@@ -12,7 +12,7 @@
   <%= simple_form_for(@company_behaviour, method: :put, url: wizard_path) do |f| %>
 
     <p class="mt-4"><b>8.</b> Selon vous, en tant que référent·e, combien d’actions de gestion et/ou de tri des déchets mises en place par votre structure sont pratiquées par vos collaborateur·rice·s au quotidien ?</p>
-    <%= f.collection_radio_buttons :daily_actions_diag, ["Aucune action", "Très peu d’action", "Quelques actions", "La majorité des actions", "Toutes les action", " Non communiqué"], :to_s, :to_s do |input| %>
+    <%= f.collection_radio_buttons :daily_actions_diag, ["Aucune action", "Très peu d’action", "Quelques actions", "La majorité des actions", "Toutes les actions", " Non communiqué"], :to_s, :to_s do |input| %>
       <label class="mx-2 mb-3">
         <%= input.radio_button %>
         <%= input.text %>
@@ -21,7 +21,7 @@
 
     <div class="d-flex justify-content-around mb-5 mt-4">
       <%= link_to "< Précédent", previous_wizard_path, class:"btn btn-primary bold" %>
-      <%= f.button :submit, "Suivant >", class:"btn btn-primary bold" %>
+      <%= f.button :submit, "Valider", class:"btn btn-primary bold" %>
     </div>
 
   <% end %>
