--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -121,7 +121,7 @@
               <td><%= user.email %></td>
               <% if current_user.referent? && user.last_sign_in_at.present? %>
                 <td><%= user.sign_in_count %></td>
-                <td><%= user.last_sign_in_at.strftime("%d-%m-%Y") %></td>
+                <td><%= user.current_sign_in_at.strftime("%d-%m-%Y") %></td>
               <% elsif current_user.referent? %>
                 <td> - </td>
                 <td> - </td>
