--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -127,7 +127,7 @@
               <td><%= user.role.capitalize %></td>
               <td><%= user.telephone %></td>
               <td><%= user.email %></td>
-              <% if current_user.referent? && user.last_sign_in_at.present? %>
+              <% if current_user.referent? && user.current_sign_in_at.present? %>
                 <td><%= user.sign_in_count %></td>
                 <td><%= user.current_sign_in_at.strftime("%d-%m-%Y") %></td>
               <% elsif current_user.referent? %>
