remove , in bin array

--- a/app/views/bins/new.html.erb
+++ b/app/views/bins/new.html.erb
@@ -38,7 +38,11 @@
             <td><%= bin.frequency_number %> <%= bin.frequency_periodicity %> <%= bin.frequency_day %> </td>
             <td> <%= bin.collector.capitalize %> </td>
             <td><% bin.trashes.each do |trash| %>
+              <% if trash == bin.trashes.last %>
+               <%= trash.name.capitalize %>
+               <% else %>
                <%= trash.name.capitalize %>,
+               <% end %>
             <% end %></td>
             <td> <%= bin.cost %>€ </td>
             <td><%= link_to "Modifier", edit_bin_path(bin), class: "btn btn-primary" %></td>
