--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -140,7 +140,7 @@
       </div>
       <div id="structure"></div>
       <h2 class="green-bg mt-5">Votre structure dans le Défi</h2>
-      <div class="d-flex justify-content-around align-items-center my-5">
+      <div class="d-flex flex-column flex-lg-row justify-content-around align-items-center my-5">
         <div class="d-flex flex-column align-items-center">
           <p><b>Coup annuel des déchets</b></p>
           <div class="pill d-flex justify-content-center align-items-center">
