--- a/app/views/comportamental_formulaires/page_four.html.erb
+++ b/app/views/comportamental_formulaires/page_four.html.erb
@@ -25,6 +25,10 @@
     <%= f.input :autre_label, wrapper_html: { class: "autre-field"}, label: 'Autre' %>
   </div>
 
+  <% if @user_behaviour_diag.errors.include?(:app_reason_ids) %>
+    <p class="has-error">La question 14 est obligatoire</p>
+  <% end %>
+
   <p class="mt-4"><b>15. </b>Au travail, pour quelle·s raison·s ne pratiquez-vous pas (ou pas plus) d’actions de tri ou réduction des déchets :</p>
     <div class="form-group otherable">
       <%= f.collection_check_boxes :no_app_reason_ids, @no_app_reasons, :id, :name do |input| %>
@@ -37,6 +41,9 @@
       <% end %>
       <%= f.input :other_label, wrapper_html: { class: "other-field"}, label: 'Autre' %>
     </div>
+    <% if @user_behaviour_diag.errors.include?(:no_app_reason_ids) %>
+      <p class="has-error">La question 15 est obligatoire</p>
+    <% end %>
 
     <div class="d-flex justify-content-around mb-5 mt-4">
       <%= link_to "< Précédent", previous_wizard_path, class:"btn btn-primary bold" %>
