modifié qq boutons + ajouté la modification du trash diagnostic

--- a/app/views/bins/index.html.erb
+++ b/app/views/bins/index.html.erb
@@ -4,7 +4,7 @@
       <h1 class="header text-primary pt-5 text-center">Gérer les bacs</h1>
 
       <div class="d-flex justify-content-center my-4">
-        <%= link_to "Ajouter un bac", new_bin_path, class: "btn btn-primary mr-2" %>
+        <%= link_to "Ajouter un bac", new_bin_path, class: "btn btn-primary bold mr-2" %>
         <%= link_to "Retour", donnees_path, class: "btn btn-outline-primary ml-2" %>
       </div>
 
