--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -39,7 +39,7 @@
         <% if current_user.referent? %>
           <div class=" text-center mt-4">
             <%= link_to "Saisir un relevé", new_collect_path, class:"btn btn-primary bold" %>
-            <%= link_to "Gérer les bacs", new_bin_path, class:"btn btn-primary bold" %>
+            <%= link_to "Gérer les bacs", bins_path, class:"btn btn-outline-primary" %>
           </div>
         <% end %>
         <div class="structur-array">
@@ -139,6 +139,7 @@
       </div>
       <div id="structure"></div>
       <h2 class="green-bg mt-5">Votre structure dans le Défi</h2>
+      <%= link_to "Modifier", edit_trash_diagnostic_path(@trash_diagnostic), class: "btn btn-outline-primary ml-4" %>
       <div class="d-flex flex-column flex-lg-row justify-content-around align-items-center my-5">
         <div class="d-flex flex-column align-items-center">
           <p><b>Coup annuel des déchets</b></p>
