--- a/app/views/bins/index.html.erb
+++ b/app/views/bins/index.html.erb
@@ -33,7 +33,11 @@
             <td><%= bin.frequency_number %> <%= bin.frequency_periodicity %> <%= bin.frequency_day %> </td>
             <td> <%= bin.collector.capitalize %> </td>
             <td><% bin.trashes.each do |trash| %>
+              <% if bin.trashes.last == trash %>
+               <%= trash.name.capitalize %>
+              <% else %>
                <%= trash.name.capitalize %>,
+              <% end %>
             <% end %></td>
             <td> <%= bin.cost %>€ </td>
             <td><%= link_to "Modifier", edit_bin_path(bin), class: "btn btn-primary" %></td>
